smartscout-vivado/smartnav-vivado/smartnav-vivado.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:31:46 **** Incremental Build of configuration Debug for project encoder ****
make all 
make: Nothing to be done for 'all'.
17:32:09 **** Clean-only build of configuration Debug for project encoder ****
make clean 
rm -rf  ./src/encoder.d ./src/main.d  ./src/encoder.o ./src/main.o  encoder.elf.size  encoder.elf
 
17:32:10 **** Auto Build of configuration Debug for project encoder ****
make all 
Building file: ../src/encoder.cc
Invoking: MicroBlaze g++ compiler
mb-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/encoder.o" -I../../encoder_bsp/microblaze_0/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/encoder.d" -MT"src/encoder.o" -o "src/encoder.o" "../src/encoder.cc"
Finished building: ../src/encoder.cc
 
Building file: ../src/main.cc
Invoking: MicroBlaze g++ compiler
mb-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -I../../encoder_bsp/microblaze_0/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cc"
Finished building: ../src/main.cc
 
Building target: encoder.elf
Invoking: MicroBlaze g++ linker
mb-g++ -Wl,-T -Wl,../src/lscript.ld -L../../encoder_bsp/microblaze_0/lib -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -Wl,--gc-sections -o "encoder.elf"  ./src/encoder.o ./src/main.o   -Wl,--start-group,-lxil,-lgcc,-lc,-lstdc++,--end-group
Finished building target: encoder.elf
 
Invoking: MicroBlaze Print Size
mb-size encoder.elf  |tee "encoder.elf.size"
   text	   data	    bss	    dec	    hex	filename
   1964	    320	   3108	   5392	   1510	encoder.elf
Finished building: encoder.elf.size
 
17:32:12 **** Auto Build of configuration Debug for project encoders ****
make all 
make: Nothing to be done for 'all'.
17:32:34 **** Auto Build of configuration Debug for project encoder ****
make all 
Building file: ../src/encoders.cpp
Invoking: MicroBlaze g++ compiler
mb-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/encoders.o" -I../../encoder_bsp/microblaze_0/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/encoders.d" -MT"src/encoders.o" -o "src/encoders.o" "../src/encoders.cpp"
Finished building: ../src/encoders.cpp
 
Building target: encoder.elf
Invoking: MicroBlaze g++ linker
mb-g++ -Wl,-T -Wl,../src/lscript.ld -L../../encoder_bsp/microblaze_0/lib -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -Wl,--gc-sections -o "encoder.elf"  ./src/encoder.o ./src/encoders.o ./src/main.o   -Wl,--start-group,-lxil,-lgcc,-lc,-lstdc++,--end-group
Finished building target: encoder.elf
 
Invoking: MicroBlaze Print Size
mb-size encoder.elf  |tee "encoder.elf.size"
   text	   data	    bss	    dec	    hex	filename
   5608	   1360	   3168	  10136	   2798	encoder.elf
Finished building: encoder.elf.size
 
17:33:24 **** Auto Build of configuration Debug for project encoder ****
make all 
Building file: ../src/encoders.cpp
Invoking: MicroBlaze g++ compiler
mb-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/encoders.o" -I../../encoder_bsp/microblaze_0/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/encoders.d" -MT"src/encoders.o" -o "src/encoders.o" "../src/encoders.cpp"
In file included from ../src/encoders.cpp:8:
../src/encoders.h: In member function 'void encoders::__init_io()':
../src/encoders.h:34:27: error: 'Gpio' was not declared in this scope
   XGpio_SetDataDirection(&Gpio, 1, 0xf);
                           ^~~~
../src/encoders.h:34:27: note: suggested alternative: 'XGpio'
   XGpio_SetDataDirection(&Gpio, 1, 0xf);
                           ^~~~
                           XGpio
make: *** [src/encoders.o] Error 1
src/subdir.mk:38: recipe for target 'src/encoders.o' failed
17:33:49 **** Clean-only build of configuration Debug for project encoder ****
make clean 
rm -rf  ./src/encoder.d ./src/main.d  ./src/encoder.o ./src/encoders.o ./src/main.o  ./src/encoders.d  encoder.elf.size  encoder.elf
 
17:33:51 **** Auto Build of configuration Debug for project encoder ****
make all 
Building file: ../src/encoders.cpp
Invoking: MicroBlaze g++ compiler
mb-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/encoders.o" -I../../encoder_bsp/microblaze_0/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/encoders.d" -MT"src/encoders.o" -o "src/encoders.o" "../src/encoders.cpp"
In file included from ../src/encoders.cpp:8:
../src/encoders.h: In member function 'void encoders::__init_io()':
../src/encoders.h:34:27: error: 'Gpio' was not declared in this scope
   XGpio_SetDataDirection(&Gpio, 1, 0xf);
                           ^~~~
../src/encoders.h:34:27: note: suggested alternative: 'XGpio'
   XGpio_SetDataDirection(&Gpio, 1, 0xf);
                           ^~~~
                           XGpio
make: *** [src/encoders.o] Error 1
src/subdir.mk:28: recipe for target 'src/encoders.o' failed
17:34:21 **** Auto Build of configuration Debug for project encoder ****
make all 
Building file: ../src/encoders.cpp
Invoking: MicroBlaze g++ compiler
mb-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/encoders.o" -I../../encoder_bsp/microblaze_0/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/encoders.d" -MT"src/encoders.o" -o "src/encoders.o" "../src/encoders.cpp"
In file included from ../src/encoders.cpp:8:
../src/encoders.h: In member function 'void encoders::__init_io()':
../src/encoders.h:36:25: error: 'Gpio' was not declared in this scope
   XGpio_InterruptClear(&Gpio, 0x0);
                         ^~~~
../src/encoders.h:36:25: note: suggested alternative: 'XGpio'
   XGpio_InterruptClear(&Gpio, 0x0);
                         ^~~~
                         XGpio
src/subdir.mk:28: recipe for target 'src/encoders.o' failed
make: *** [src/encoders.o] Error 1
17:34:28 **** Auto Build of configuration Debug for project encoder ****
make all 
Building file: ../src/encoders.cpp
Invoking: MicroBlaze g++ compiler
mb-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/encoders.o" -I../../encoder_bsp/microblaze_0/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/encoders.d" -MT"src/encoders.o" -o "src/encoders.o" "../src/encoders.cpp"
In file included from ../src/encoders.cpp:8:
../src/encoders.h: In member function 'void encoders::__init_io()':
../src/encoders.h:30:7: warning: variable 'status' set but not used [-Wunused-but-set-variable]
   int status;
       ^~~~~~
Finished building: ../src/encoders.cpp
 
Building file: ../src/main.cc
Invoking: MicroBlaze g++ compiler
mb-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -I../../encoder_bsp/microblaze_0/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cc"
Finished building: ../src/main.cc
 
Building target: encoder.elf
Invoking: MicroBlaze g++ linker
mb-g++ -Wl,-T -Wl,../src/lscript.ld -L../../encoder_bsp/microblaze_0/lib -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -Wl,--gc-sections -o "encoder.elf"  ./src/encoders.o ./src/main.o   -Wl,--start-group,-lxil,-lgcc,-lc,-lstdc++,--end-group
Finished building target: encoder.elf
 
Invoking: MicroBlaze Print Size
mb-size encoder.elf  |tee "encoder.elf.size"
   text	   data	    bss	    dec	    hex	filename
   5608	   1360	   3168	  10136	   2798	encoder.elf
Finished building: encoder.elf.size
 
